--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required( VERSION 3.0.0 )
 project(wasm-doom)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
+#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
 
 include_directories(
     gifenc
@@ -9,10 +9,11 @@ include_directories(
     sdl_mixer
     src
     src/doom
-    )
+)
 file (GLOB_RECURSE SRC_FILES src/*.c gifenc/*.c opl/*.c sdl_mixer/*.c)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Oz -Wall \
+set(CMAKE_C_FLAGS " \
+    ${CMAKE_C_FLAGS} -O3 -Wall \
     -Wno-\#warnings \
     -Wno-macro-redefined \
     -Wno-switch \
@@ -22,28 +23,24 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Oz -Wall \
     -s ALLOW_MEMORY_GROWTH=1 \
     -s NO_EXIT_RUNTIME=1 \
     -s EXTRA_EXPORTED_RUNTIME_METHODS=['FS','UTF8ToString'] \
-    --no-heap-copy")
+    -s FORCE_FILESYSTEM=1 \
+    --no-heap-copy \
+    --preload-file ${CMAKE_CURRENT_LIST_DIR}/../freedoom1.wad@freedoom1.wad \
+")
 
 if (CMAKE_BUILD_TYPE MATCHES Debug)
-  add_executable(index ${SRC_FILES})
-  target_link_libraries(index)
-  set_target_properties( index PROPERTIES SUFFIX ".html" )
-
-  set(CMAKE_C_FLAGS_DEBUG "-s ASSERTIONS=2 --source-map-base http://localhost:8000/ -g --preload-file ${CMAKE_CURRENT_LIST_DIR}/../doom1.wad@doom1.wad")
-
-  #add_custom_command(TARGET index POST_BUILD
-  #  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
-  #  COMMAND sed -i index.wasm.map 's|${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/||g' index.wasm.map
-  #  COMMENT "Fix WebAssembly source map root"
-  #)
-
-  em_link_js_library(index ${libraryJsFiles})
+    set(CMAKE_C_FLAGS_DEBUG "-s ASSERTIONS=2 --source-map-base http://localhost:8000/ -g")
+    set(HTML_TEMPLATE ${CMAKE_CURRENT_LIST_DIR}/app/shell_minimal_debug.html)
 else()
-  add_executable(doom ${SRC_FILES})
-  target_link_libraries(doom)
-  set_target_properties( doom PROPERTIES SUFFIX ".js" )
-
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s MODULARIZE=1 -s ASSERTIONS=0")
-
-  em_link_js_library(doom ${libraryJsFiles})
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s ASSERTIONS=0")
+    set(HTML_TEMPLATE ${CMAKE_CURRENT_LIST_DIR}/app/shell_minimal.html)
 endif()
+
+add_executable(doom ${SRC_FILES})
+target_link_libraries(doom
+    idbfs.js
+    --shell-file=${HTML_TEMPLATE}
+)
+set_target_properties(doom PROPERTIES SUFFIX .html)
+
+em_link_js_library(doom ${libraryJsFiles})
