Put freedoom1.wad to git repo for easier compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ include_directories(
 file (GLOB_RECURSE SRC_FILES src/*.c gifenc/*.c opl/*.c sdl_mixer/*.c)
 
 set(CMAKE_C_FLAGS " \
-    ${CMAKE_C_FLAGS} -O3 -Wall \
+    ${CMAKE_C_FLAGS} -Wall \
     -Wno-\#warnings \
     -Wno-macro-redefined \
     -Wno-switch \
@@ -28,19 +28,16 @@ set(CMAKE_C_FLAGS " \
     --preload-file ${CMAKE_CURRENT_LIST_DIR}/freedoom1.wad@freedoom1.wad \
 ")
 
-if (CMAKE_BUILD_TYPE MATCHES Debug)
-    set(CMAKE_C_FLAGS_DEBUG "-s ASSERTIONS=2 --source-map-base http://localhost:8000/")
-    set(HTML_TEMPLATE ${CMAKE_CURRENT_LIST_DIR}/app/shell_minimal_debug.html)
-else()
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s ASSERTIONS=0")
-    set(HTML_TEMPLATE ${CMAKE_CURRENT_LIST_DIR}/app/shell_minimal.html)
-endif()
-
 add_executable(doom ${SRC_FILES})
-target_link_libraries(doom
-    idbfs.js
-    --shell-file=${HTML_TEMPLATE}
-)
 set_target_properties(doom PROPERTIES SUFFIX .html)
+target_link_libraries(doom idbfs.js)
+
+if (CMAKE_BUILD_TYPE MATCHES Debug)
+    set(CMAKE_C_FLAGS_DEBUG "-s ASSERTIONS=2 -O2")
+    target_link_libraries(doom -O2 --shell-file=${CMAKE_CURRENT_LIST_DIR}/app/shell_minimal_debug.html)
+else()
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s ASSERTIONS=0 -flto -O3")
+    target_link_libraries(doom -flto -O3 --shell-file=${CMAKE_CURRENT_LIST_DIR}/app/shell_minimal.html)
+endif()
 
 em_link_js_library(doom ${libraryJsFiles})
