--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,8 +43,8 @@ if (CMAKE_BUILD_TYPE MATCHES Debug)
     set(CMAKE_C_FLAGS_DEBUG "-s ASSERTIONS=2 -O2")
     target_link_libraries(doom -O2 --shell-file=${CMAKE_CURRENT_LIST_DIR}/app/shell_minimal_debug.html)
 else()
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s ASSERTIONS=0 -flto -Oz")
-    target_link_libraries(doom -flto -Oz --shell-file=${CMAKE_CURRENT_LIST_DIR}/app/shell_minimal.html)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s ASSERTIONS=0 -O3")
+    target_link_libraries(doom -O3 --shell-file=${CMAKE_CURRENT_LIST_DIR}/app/shell_minimal.html)
 endif()
 
 em_link_js_library(doom ${libraryJsFiles})
