Pre-allocate memory to prevent game freezing in title screen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ set(CMAKE_C_FLAGS " \
     -s USE_SDL=2 \
     -s USE_LIBPNG=1 \
     -s ALLOW_MEMORY_GROWTH=1 \
+    -s INITIAL_MEMORY=41943040 \
     -s NO_EXIT_RUNTIME=1 \
     -s EXTRA_EXPORTED_RUNTIME_METHODS=['FS','UTF8ToString'] \
     -s FORCE_FILESYSTEM=1 \
